# Plugins

./: .gitignore  CMakeLists.txt  README.md  justfile  package-lock.json  package.json
.github/workflows/: runner.yml
PLC/GameOfLife/: GameOfLife.cpp
PLC/GameOfLife/include/: GameOfLife.hh
PLC/GameOfLife/src/: GameOfLife.cpp
PLC/Lenia/: Lenia.cpp
PLC/Lenia/assets/: init.json
PLC/Lenia/include/: Lenia.hh
PLC/Lenia/src/: Lenia.cpp
PLC/MultiChannel/: MultiChannel.cpp
PLC/MultiCouple/: MultiCouple.cpp
PLC/Wolfram/: Wolfram.cpp
PLC/Wolfram/include/: Wolfram.hh
PLC/Wolfram/src/: Wolfram.cpp
PLC/include/: GameOfLife.hh  Lenia.hh  MultiChannel.hh  MultiCouple.hh
benchmarks/: CMakeLists.txt
benchmarks/src/: BM_GameOfLife.cpp  benchmarks.cpp
src/: index.html  main.cpp  main.js  main.ts
src/utils/: window.ts
tests/: CMakeLists.txt  test.cpp
tests/PLC/: TestGameOfLife.cpp  TestLenia.cpp  TestMultiChannel.cpp  TestMultiCouple.cpp  TestWolfram.cpp
